tests/fail/name/unbound-name.pion
//~ run = "${PION} elab ${FILE}"

hello
